@@ -404,6 +404,7 @@ class RpcInterfaceTest(unittest.TestCase):
     @patch('supvisors.rpcinterface.RPCInterface._check_operating')
     def test_restart_application(self, mocked_check, mocked_stop, mocked_start):
         """ Test the restart_application self.rpc. """
+        from supvisors.ttypes import StartingStrategies
         # test RPC call with sub-RPC calls return a direct result
         mocked_stop.return_value = True
         mocked_start.return_value = False
@@ -420,7 +421,7 @@ class RpcInterfaceTest(unittest.TestCase):
         self.assertFalse(deferred())
         self.assertFalse(deferred.waitstop)
         self.assertEqual(0, mocked_stop.call_count)
-        self.assertEqual([call(0, 'appli', 'wait')], mocked_start.call_args_list)
+        self.assertEqual([call(StartingStrategies.CONFIG, 'appli', 'wait')], mocked_start.call_args_list)
         mocked_start.reset_mock()
         # test RPC call with sub_RPC calls returning jobs
         # test with mocking functions telling that the jobs are not completed
@@ -450,7 +451,7 @@ class RpcInterfaceTest(unittest.TestCase):
         self.assertEqual(NOT_DONE_YET, deferred())
         self.assertFalse(deferred.waitstop)
         self.assertEqual(0, mocked_stop.call_count)
-        self.assertEqual([call(0, 'appli', 'wait')], mocked_start.call_args_list)
+        self.assertEqual([call(StartingStrategies.CONFIG, 'appli', 'wait')], mocked_start.call_args_list)
         self.assertEqual([call()], mocked_stop_job.call_args_list)
         self.assertEqual(0, mocked_start_job.call_count)
         mocked_stop_job.reset_mock()
@@ -733,6 +734,7 @@ class RpcInterfaceTest(unittest.TestCase):
     @patch('supvisors.rpcinterface.RPCInterface._check_operating')
     def test_restart_process(self, mocked_check, mocked_stop, mocked_start):
         """ Test the restart_process self.rpc. """
+        from supvisors.ttypes import StartingStrategies
         # test RPC call with sub-RPC calls return a direct result
         mocked_stop.return_value = True
         mocked_start.return_value = False
@@ -749,7 +751,7 @@ class RpcInterfaceTest(unittest.TestCase):
         self.assertFalse(deferred())
         self.assertFalse(deferred.waitstop)
         self.assertEqual(0, mocked_stop.call_count)
-        self.assertEqual([call(0, 'appli:*', 'arg list', 'wait')], mocked_start.call_args_list)
+        self.assertEqual([call(StartingStrategies.CONFIG, 'appli:*', 'arg list', 'wait')], mocked_start.call_args_list)
         mocked_start.reset_mock()
         # test RPC call with sub_RPC calls returning jobs
         # test with mocking functions telling that the jobs are not completed
@@ -779,7 +781,7 @@ class RpcInterfaceTest(unittest.TestCase):
         self.assertEqual(NOT_DONE_YET, deferred())
         self.assertFalse(deferred.waitstop)
         self.assertEqual(0, mocked_stop.call_count)
-        self.assertEqual([call(0, 'appli:*', '', 'wait')], mocked_start.call_args_list)
+        self.assertEqual([call(StartingStrategies.CONFIG, 'appli:*', '', 'wait')], mocked_start.call_args_list)
         self.assertEqual([call()], mocked_stop_job.call_args_list)
         self.assertEqual(0, mocked_start_job.call_count)
         mocked_stop_job.reset_mock()
