@@ -3,7 +3,8 @@
 
 * Python Enum used for enumerations (not available in Python 2.7)
 
-* The Master Supvisors node drives the transition to OPERATION
+* Fixed https://github.com/julien6387/supvisors/issues/90
+  The Master Supvisors node drives the transition to OPERATION
 
 
 0.5 (2021-03-01)
